--- a/index.ipynb
+++ b/index.ipynb
@@ -1048,11 +1048,11 @@
     "# Replace None with appropriate text\n",
     "\"\"\"\n",
     "\n",
-    "Due to PR being smaller than 0.05, then whe reject the Null hypothesis.\n",
+    "Due to PR being smaller than 0.05, therefore we reject the Null hypothesis.\n",
     "\n",
     "There is a diference between the means.\n",
     "\n",
-    "Investigate why Coonnecticut has better health then the other states.\n",
+    "Investigate why Coonnecticut has a better health than the other states.\n",
     "\"\"\""
    ]
   },
